--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,12 +10,12 @@
   "categories": ["medical", "health", "utilities"],
   "icons": [
     {
-      "src": "/icon-192x192.png",
+      "src": "/icons/favicon.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icon-512x512.png",
+      "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     },
